--- a/qiita_post.css
+++ b/qiita_post.css
@@ -1,6 +1,53 @@
-h1 {
-  color: red;
+.box1 {
+  width: auto;
+  height: 100px;
+  background-color: red;
 }
-#word-blue {
-  color: blue;
+
+.box2 {
+  width: auto;
+  height: 50px;
+  background-color: blue;
+}
+/* 画面が1024px以下の際に適応 */
+@media screen and (max-width: 1024px) {
+  .box1 {
+    width: auto;
+    height: 100px;
+    background-color: green;
+  }
+
+  .box2 {
+    width: auto;
+    height: 50px;
+    background-color: gold;
+  }
+}
+/* 画面が768px以下の際に適応 */
+@media screen and (max-width: 768px) {
+  .box1 {
+    width: auto;
+    height: 100px;
+    background-color: aqua;
+  }
+
+  .box2 {
+    width: auto;
+    height: 50px;
+    background-color: slateblue;
+  }
+}
+/* 画面が425px以下の際に適応 */
+@media screen and (max-width: 425px) {
+  .box1 {
+    width: auto;
+    height: 100px;
+    background-color: hotpink;
+  }
+
+  .box2 {
+    width: auto;
+    height: 50px;
+    background-color: black;
+  }
 }
